k8s-files/service-apple-arm.yaml
kind: Pod
apiVersion: v1
metadata:
  name: apple-app
  namespace: test-ingress-ns
  labels:
    app: apple
spec:
  containers:
    - name: apple-app
      image: teapow/http-echo
---
kind: Service
apiVersion: v1
metadata:
  name: apple-service
  namespace: test-ingress-ns
spec:
  selector:
    app: apple
  ports:
    - port: 8080
