k8s-files/service-banana-arm.yaml
kind: Pod
apiVersion: v1
metadata:
  name: banana-app
  namespace: test-ingress-ns
  labels:
    app: banana
spec:
  containers:
    - name: banana-app
      image: teapow/http-echo
---
kind: Service
apiVersion: v1
metadata:
  name: banana-service
  namespace: test-ingress-ns
spec:
  selector:
    app: banana
  ports:
    - port: 8080
