k8s-files/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo-test-ingress
  namespace: test-ingress-ns
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /apple
          backend:
            serviceName: apple-service
            servicePort: 8080
        - path: /banana
          backend:
            serviceName: banana-service
            servicePort: 8080
